Splash - fix issue on mobile

--- a/src/components/splash/Splash.scss
+++ b/src/components/splash/Splash.scss
@@ -57,7 +57,7 @@
 		background-image: url('./arcade.png');
 		background-repeat: no-repeat;
 		background-position: center;
-		mix-blend-mode: lighten;
+		mix-blend-mode: screen;
 		background-size: 100%;
 
 		&:before{
